Add informations about WSL in Intro-Linux.ipynb

--- a/01-Intro_to_python/Intro-Linux.ipynb
+++ b/01-Intro_to_python/Intro-Linux.ipynb
@@ -22,7 +22,9 @@
    "source": [
     "## 1 What is Linux ?\n",
     "\n",
-    "It is a free operating system created by Linus Torvald (a finish software engineer), and currently developped by enthusiastic communities of programmers all over the world. It is widely used in the scientific community. Even if you see scientists using Apple-Macintosh machines, don't be fooled ... This is because OS-X is built on top of a linux kernel and basically offers (most of) the functionalities of linux, with on top fancy Apple software developments. It also means that in general, many applications/programs developed under Linux will work on a Mac. Linux is also the kernel for Android or Chrome OS.   "
+    "It is a free operating system created by Linus Torvald (a finish software engineer), and currently developped by enthusiastic communities of programmers all over the world. It is widely used in the scientific community. Even if you see scientists using Apple-Macintosh machines, don't be fooled ... This is because OS-X is built on top of a linux kernel and basically offers (most of) the functionalities of linux, with on top fancy Apple software developments. It also means that in general, many applications/programs developed under Linux will work on a Mac. Linux is also the kernel for Android or Chrome OS.   \n",
+    "\n",
+    "For a long time, it was not possible to run Linux natively with a Windows operating system. One had to install a dedicated virtual machine. However, things are changing, and one can now install Linux on a Windows machine with WSL (More information on https://learn.microsoft.com/en-us/windows/wsl/install). "
    ]
   },
   {
