Corrects typos in README.md and Introduction.ipynb

--- a/Introduction.ipynb
+++ b/Introduction.ipynb
@@ -32,8 +32,8 @@
     "```shell\n",
     "mkdir SPAT0002   # create a directory to save a local copy of the repository\n",
     "cd SPAT0002      # move into that directory\n",
-    "git clone https://github.com/SPAT0002-1/Lectures_20XX-20YY.git   # UPDATE - replace XX and YY with the years of interest\n",
-    "cd Lectures_20XX-20YY\n",
+    "git clone https://github.com/SPAT0002-1/Ongoing.git   \n",
+    "cd Ongoing\n",
     "```\n",
     "### At the start of a lecture \n",
     "\n",
