Corrects typos in Jupyter.ipynb ; Add Recap notebook w. main python structures

--- a/01-Intro_to_python/Jupyter.ipynb
+++ b/01-Intro_to_python/Jupyter.ipynb
@@ -43,7 +43,7 @@
     "- SPYDER that comes with anaconda python distribution. https://www.spyder-ide.org/\n",
     "- Enthought tool suite also provides a powerful IDE. https://docs.enthought.com/ets/\n",
     "\n",
-    "**Another reason** why knowing a bit jupyter is useful is that it becomes the entrance door to several big online science platforms. As introduced in this paper by Juneau et al. 2021 https://arxiv.org/abs/2104.06527, have developped jupyter interfaces to access their science ecosystems. This is the case e.g. of the [AtroDataLab](https://datalab.noirlab.edu/) and of the [DESIHUB](https://desihub.github.io/). Not all these data access are public but this an illustration, among others, that Jupyter is being more and more popular for collaboration in the astronomical community.  "
+    "**Another reason** why knowing a bit jupyter is useful is that it becomes the entrance door to several big online science platforms. As introduced in this paper by Juneau et al. 2021 https://arxiv.org/abs/2104.06527, the American Astronomical Society has developped jupyter interfaces to access their science ecosystems. This is the case e.g. of the [AtroDataLab](https://datalab.noirlab.edu/) and of the [DESIHUB](https://desihub.github.io/). Not all the platforms are public but this an illustration, among others, that Jupyter is being more and more popular for collaboration in the astronomical community.  "
    ]
   },
   {
