--- a/Install_python.ipynb
+++ b/Install_python.ipynb
@@ -22,7 +22,13 @@
     "During the lecture, we use Python > 3.5. In principle python 3.6, 3.7, 3.8, 3.9 should work fine. \n",
     "Note that the use of environment allows you to install easily other versions of python (e.g. 2.7) and use that environment for specific projects. To learn more about asset of python environement within Conda: https://www.freecodecamp.org/news/why-you-need-python-environments-and-how-to-manage-them-with-conda-85f155f4353c \n",
     " \n",
-    "Once anaconda is installed, you can easily install Jupyter http://jupyter.org/install, either via command line (there is an `anaconda prompt` on Windows; simply use the terminal on Linux or MacOS), or through `anaconda-navigator` (if you have installed the anaconda distribution). Anaconda-navigator can be launched from command line OR can be launched via a \"programme menu\". \n"
+    "Once anaconda is installed, you can easily install [Jupyter](http://jupyter.org/install), either via command line (there is an `anaconda prompt` on Windows; simply use the terminal on Linux or MacOS), or through `anaconda-navigator` (if you have installed the anaconda distribution). Anaconda-navigator can be launched from command line OR can be launched via a \"programme menu\". \n",
+    "\n",
+    "The command-line installation (If you use a(n) (ana-)conda distribution) should simply be: \n",
+    "\n",
+    "``` bash \n",
+    "conda install notebook\n",
+    "```\n"
    ]
   },
   {
@@ -54,7 +60,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.8.16"
   }
  },
  "nbformat": 4,
