Add direct git installation links for various operating systems

--- a/Introduction.ipynb
+++ b/Introduction.ipynb
@@ -23,6 +23,13 @@
     "\n",
     "The best way to use these notebooks consists in using `git` to download the repository and then update your local copy. This is not difficult. A very good introduction to git can be found here:  https://swcarpentry.github.io/git-novice/ or https://github.com/drphilmarshall/GettingStarted#top (the latter link even includes a link to a youtube video). Since git does not require an external repository, you can use this \"system versioning\" tool to track any of your project on your computer. This works for a code, but also for e.g. a paper or a thesis you are writing. Instruction for onstalling git can be found at https://git-scm.com/book/en/v2/Getting-Started-Installing-Git. \n",
     "\n",
+    "### Git installation\n",
+    "\n",
+    "If git is not already installed on your machine (you can generally check this within a Terminal window easily), then you may follow instruction on [thi page](https://git-scm.com/book/en/v2/Getting-Started-Installing-Git). In short, the stand-alone installation program are available along the following links depending of your OS:\n",
+    "- Windows:  https://git-scm.com/download/win \n",
+    "- Mac OSx: If it is not installed, there is binary installer available [here](https://sourceforge.net/projects/git-osx-installer/) but it is not the latest option. Alternatively a slightly more demanding option requires installation of Xcode/Homebrew/macports (see https://git-scm.com/download/mac). \n",
+    "- Linux-Ubuntu: `sudo apt-get install git`\n",
+    "- Linux Redhead/Fedora: `sudo yum install git` or `sudo dnf install git`\n",
     "\n",
     "### First Lecture \n",
     "\n",
@@ -111,7 +118,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
