Clarified some descriptions + update docstring example to follow PEP8 recommendations

--- a/01-Intro_to_python/Scripts_and_functions.ipynb
+++ b/01-Intro_to_python/Scripts_and_functions.ipynb
@@ -266,27 +266,37 @@
    "source": [
     "#### 1.6.1 Functions and docstrings \n",
     "\n",
-    "A **very useful** functionality of python is the ability to write, together with your function a simple `help` / basic documentation. For this, you simply have to start the \"help\"-block with triple-quotes (i.e. `\"\"\"`) and end it similarly (This `help()` block needs to be indentated). In python jargon, this help block is effectively called a `Docstring`. This `Docstring` can be called in interactive mode (`help(myfunction)`) will return the information present in that Doctring. *Within Jupyter notebooks*, you can use the combination of keys `Shift + Tab` when your cursor is positioned just after the opening parenthese, to see the help in a small *pop-up window* (repeat `Shift+Tab` for different options). Because `Docstring` are used to design the `help`, it means that it is better to follow some rules when writing them. Unfortunately, those rules are not universal. I like the following structure (that is also compliant with Sphinx Documentation tool): \n",
+    "A **very useful** functionality of python is the ability to write, together with your function a simple `help` / basic documentation. For this, you simply have to start the \"help\"-block with triple-quotes (i.e. `\"\"\"`) and end it similarly (this `help()` block needs to be indentated). In python jargon, this help block is effectively called a `Docstring`.\n",
+    "\n",
+    "This `Docstring` can be called in interactive mode (`help(myfunction)`) will return the information present in that Doctring. *Within Jupyter notebooks*, you can use the combination of keys `Shift + Tab` when your cursor is positioned just after the opening parenthese, to see the help in a small *pop-up window* (repeat `Shift+Tab` for different options). Alternatively, just run the cell calling your function followed by a question mark: `myfunction?`\n",
+    "\n",
+    "Because `Docstrings` are used to design the `help`, it means that it is better to follow some rules when writing them. While those rules are not universal, a recommended and widely used format is the following (NumPy-style dcstrings, which is also compliant with Sphinx Documentation tool):\n",
     "``` python \n",
     "\"\"\"\n",
-    "My description of a of very exhautive\n",
-    "format docstring.\n",
+    "One-line description of what the function does.\n",
+    "\n",
+    "Optionally followed by a paragraph providing a \n",
+    "more detailed description of the inner workings\n",
+    "of the function.\n",
     "\n",
     "Parameters\n",
     "----------\n",
-    "first : array_like\n",
+    "first : float\n",
     "    the 1st param name `first`\n",
-    "second :\n",
-    "    the 2nd param\n",
-    "third : {'value', 'other'}, optional\n",
-    "    the 3rd param, by default 'value'\n",
+    "second : tuple\n",
+    "    the 2nd param, should be a pair of floats\n",
+    "    (e.g. xy coordinates).\n",
+    "third : int\n",
+    "    the 3rd param\n",
+    "fourth : string, {'value', 'other'}, optional\n",
+    "    the 4th param, by default 'value'\n",
     "\n",
     "Returns\n",
     "-------\n",
     "string\n",
     "    a value in a string\n",
     "\n",
-    "Raises\n",
+    "Raises #optional\n",
     "------\n",
     "KeyError\n",
     "    when a key error\n",
@@ -295,29 +305,32 @@
     "\"\"\"\n",
     "```\n",
     "\n",
-    "Applied to the `moffat1D()` this would be:\n",
+    "Let's apply this to the `moffat1D()` function that we defined above:\n",
     "\n",
     "``` python\n",
     "def moffat1D(r, I, alpha, beta):\n",
     "    \"\"\"\n",
-    "    Calculates the value of a Moffat profile \n",
-    "    at position r. \n",
+    "    Evaluate a Moffat profile at position r.\n",
+    "    \n",
+    "    The equation for the 1D Moffat function is\n",
+    "    given by:\n",
     "    y = I * (1+(r/alpha)^2)^(-beta)\n",
     "    \n",
-    "    Parameters:\n",
-    "    -----------\n",
+    "    Parameters\n",
+    "    ----------\n",
     "    r : float\n",
     "        Position at which function is evaluated\n",
     "    I : float\n",
     "        Intensity\n",
     "    alpha: float\n",
-    "        alpha param\n",
+    "        alpha parameter\n",
     "    beta: float\n",
-    "        beta param\n",
-    "    Returns:\n",
-    "    --------\n",
+    "        beta parameter\n",
+    "        \n",
+    "    Returns\n",
+    "    -------\n",
     "    float\n",
-    "        The value of the moffat at position r\n",
+    "        The value of the Moffat function at position r\n",
     "    \"\"\"\n",
     "    arg = (r / alpha)**2 + 1\n",
     "    y = I / arg**(beta)\n",
@@ -327,7 +340,8 @@
     "\n",
     "**Notes:**\n",
     "- You can read the [Docstring convention](https://www.python.org/dev/peps/pep-0257/) that lists recommendations in writing the help of your function. The one described above, the one used by the numpy programmers, is explained on the [numpydoc webapge](https://numpydoc.readthedocs.io/en/latest/format.html#format) \n",
-    "- In the \"programming\" section of this class, we *learn to drive* (python) but we won't spend too much time on the *traffic regulation* (i.e. how to drive well and how to drive together with other people -in the same code or not-). Therefore, the [Style guide for Python code](https://www.python.org/dev/peps/pep-0008/) is probably a good way to get recommendations on *good practices* for programming in `Python`. We'll try to get used to some of them, but we cannot afford spending too much time on this topic. As you may be encouraged to release your code with your scientific results, or may want to release a public code in the future, I encourage you to read such a document before doing any serious programming. (See at the end of this notebook for a summary)"
+    "- In the \"programming\" section of this class, we *learn to drive* (code in python) but we won't spend too much time on the *traffic regulation* (i.e. how to code well following best practices). The [Style guide for Python code](https://www.python.org/dev/peps/pep-0008/) is probably a good way to get recommendations on *good practices* for programming in `Python`. We'll try to get used to some of them (as above), but cannot afford spending too much time on this topic.\n",
+    "- When publishing papers, you may be encouraged to also release your codes along with your scientific results, or may want to release a public code in the future. Reading the good practices linked above is therefore recommended before doing any serious programming. (See at the end of this notebook for a summary)"
    ]
   },
   {
@@ -517,9 +531,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:py3_lectures]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-py3_lectures-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -531,7 +545,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
