--- a/02-Main_useful_python_modules/Modules_in__python_numpy_Part1.ipynb
+++ b/02-Main_useful_python_modules/Modules_in__python_numpy_Part1.ipynb
@@ -51,7 +51,7 @@
     "np.linspace(1, 10, 10) # creates an array of 10 elements from 1 to 10\n",
     "np.zeros(10)  # creates an array of 10 elements filled with 0\n",
     "np.ones(10)   # creates an array of 5 elements filled with 1\n",
-    "np.zeros((2, 5))  # mulitdimensional arrays of 2 rows and 5 columns\n",
+    "np.zeros((2, 5))  # multidimensional arrays of 2 rows and 5 columns\n",
     "\n",
     "```\n",
     "- 2-D arrays of `shape=(r, c)` are arrays with `r` *rows* and `c` *columns*. "
@@ -82,7 +82,7 @@
     "```python   \n",
     "a = np.array([[1,2,3], [3,5,5]])\n",
     "```\n",
-    "you create an **instance** of the object array (in practice you mostly allocate memory). Note that you can work with arrays created on the fly without saving them as a variable. You can see this as a dummy instantiation.  \n",
+    "you create an **instance** of an array object (in practice you mostly allocate memory). Note that you can work with arrays created on the fly without saving them as a variable. You can see this as a dummy instantiation.  \n",
     "- An object has **attributes**. As a chair can be in wood, plastic, metal, ... objects have attributes. For example, the `shape` is an attribute of an array. This is a property which is attributed to the instance of the object. You can access an object attribute using `instance.attribute`, i.e. to know the shape of `a` you can do: \n",
     "```python\n",
     "a.shape\n",
@@ -91,11 +91,11 @@
     "```python\n",
     "np.shape(a) \n",
     "``` \n",
-    "- There are also a functionality of an object, namely function that do operation on the object and return something. Those functions are formally called **methods**. Again, you can call a method by doing `module.method(a, args)` or using the `.` directly on the instance `instance.function(arg)`: \n",
+    "- There are also a functionality of an object, namely function that do an operation on the object and return something. Those functions are formally called **methods**. Again, you can call a method by doing `module.method(a, args)` or using the `.` directly on the instance `instance.function(arg)`: \n",
     "```python\n",
-    "a.cumsum(axis=1)  \n",
-    "#or \n",
     "np.cumsum(a, axis=1)\n",
+    "#or \n",
+    "a.cumsum(axis=1)  \n",
     "```"
    ]
   },
@@ -399,12 +399,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Exercise:** Elementwise operations\n",
+    "**Exercises:** Elementwise operations\n",
     "\n",
     "In the code cell below, try simple arithmetic elementwise operations: \n",
     "- add even elements with odd elements using 2 different techniques (slicing and list comprehension)\n",
-    "- Time the two solution using %timeit.\n",
-    "- Generate an array from a list made of strings and floats. What is the final array type ?\n",
+    "- Time the two solution using %timeit."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "- Generate 2 arrays such that their elements are as follow :    \n",
     "   `[2^0, 2^1, 2^2, 2^3, 2^4]`    \n",
     "   `a_i = 2^(3*i) - i `    \n",
@@ -415,13 +434,6 @@
     "[  1   7  62 509]    \n",
     "```"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -461,9 +473,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda env:py3_lectures]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-py3_lectures-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -475,7 +487,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
