Updated Numpy Part 2 notebook

--- a/02-Main_useful_python_modules/Modules_in__python_numpy_Part2.ipynb
+++ b/02-Main_useful_python_modules/Modules_in__python_numpy_Part2.ipynb
@@ -49,7 +49,13 @@
    "source": [
     "### II.2 `array` copies and views:   <a class=\"anchor\" id=\"II.2\"></a>\n",
     "\n",
-    "A slicing operation creates a **view** on the original array, which is just a way of accessing array data. Thus the original array is not copied in memory. More information about copies and views can be found in [Modules_in_python_numpy_adv.ipynb](Modules_in_python_numpy_adv.ipynb), but can be ignored if this is your first contact with `numpy`. "
+    "A `copy` of an array `a` can be done e.g. with `b = a.copy()`. Modifying `b`, will then NOT affect `a`. This allocates more space in memory.\n",
+    "\n",
+    "When an array `view` is created, the original array is not copied in memory. A view of `a` can be created with `b = a.view()`. Modifying `b` then also modifies `a`.\n",
+    "\n",
+    "Cases where a view can be useful:\n",
+    "- A *slicing* operation creates a **view** on the original array. It can be useful to modify a corrupted part of an image (cast into a 2D numpy array), by just dealing with the slice. This will then also modify the original (larger image).\n",
+    "- If you are only interested in a specific part of the data (i.e. part of your numpy array), and do not plan to use any more the original data. You can slice it (which creates a view, i.e. not allocating more memory), and just continue manipulating the view."
    ]
   },
   {
@@ -58,7 +64,7 @@
    "source": [
     "### II.3 Array shape manipulation <a class=\"anchor\" id=\"II.3\"></a>\n",
     "\n",
-    "There are various possibilities to modify arrays (e.g. adding a row/column, shuffle columns, flatten, resize,...). They are discussed in details in [Modules_in_python_numpy_adv.ipynb](Modules_in_python_numpy_adv.ipynb). Let's focus here on array reshaping (which allows to perform several of the operations outlined above). "
+    "There are various possibilities to modify arrays (e.g. adding a row/column, shuffle columns, flatten, resize,...).  Let's focus here on array reshaping (which allows to perform several of the operations outlined above), addition of new dimensions, and array flattening."
    ]
   },
   {
@@ -75,6 +81,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "a = np.array([[1, 2, 3], [4, 5, 6]])\n",
     "print(a, a.shape) \n",
     "b = a.reshape((2, 3))\n",
@@ -89,6 +96,82 @@
    "source": [
     "# Alternatively use of \"-1\" to implicitely derive the size of one of the dimensions \n",
     "a.reshape((2, -1))    # unspecified (-1) value is inferred"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- **II.3.2 Resizing**:   \n",
+    "The `numpy.newaxis` [constant](https://numpy.org/doc/stable/reference/constants.html#numpy.newaxis) allows one to create new additional dimensions in your array as follow:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = np.array([[1, 2, 3], [4, 5, 6]])\n",
+    "print(a.shape) \n",
+    "b = a[np.newaxis]\n",
+    "print(b.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that this is equivalent to adding a pair of square brackets in the definition:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c = np.array([[[1, 2, 3], [4, 5, 6]]])\n",
+    "print(c.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The addition of a new axis can be elsewhere, e.g. to add a new third dimension:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d = a[:,:,np.newaxis]\n",
+    "print(d.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- **II.3.3 Flattening**:   \n",
+    "The method `flatten()` allows one to flatten all dimensions of your array, making it 1D:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = np.array([[[1, 2, 3], [4, 5, 6]],\n",
+    "              [[4, 5, 6], [-1,-2,-3]]])\n",
+    "print(a.shape) \n",
+    "b = a.flatten()\n",
+    "print(b)\n",
+    "print(b.shape)"
    ]
   },
   {
@@ -115,7 +198,7 @@
     "\n",
     "Those `ufunc` (universal functions) are included (compiled) in `numpy` and consist of fast elementwise operations. They include: \n",
     "\n",
-    "- all mathematic operation: +, -, /, *, `***` \n",
+    "- all mathematic operation: +, -, /, *, ** \n",
     "- Mathematical expressions: sin, exp, cos, log10, ... \n",
     "- Comparison operators <, >, =, ...\n",
     "- etc ... \n",
@@ -128,7 +211,7 @@
     "b = [ val + 5 for val in a]   # add 5 to each element of the list  \n",
     "# In numpy\n",
     "a = np.array(a)\n",
-    "b = a + 5                     # add 5 to each element of the array.\n",
+    "b = a + 5                     # add 5 to each element of the array\n",
     "```"
    ]
   },
@@ -138,6 +221,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# with list comprehension\n",
     "a = [1,2,3,4,5]\n",
     "b = [ val + 5 for val in a]   # add 5 to each element of the list\n",
     "b"
@@ -149,8 +233,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# with numpy\n",
     "a = np.array(a)\n",
-    "b = a + 5   \n",
+    "b = a + 5\n",
     "b"
    ]
   },
@@ -246,6 +331,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c = np.arange(3).reshape(3,1) +np.arange(3)\n",
+    "c"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -329,8 +424,7 @@
    "outputs": [],
    "source": [
     "a = np.arange(10)\n",
-    "print(a)\n",
-    "a[a>3]"
+    "a[3:]"
    ]
   },
   {
@@ -349,8 +443,22 @@
     "M[M-3 < 2]# can also do masking of n dimensional array\n",
     "M[[1,0], :2] # Use fancy indexing and slicing - 1st 2 elements, of rows 1 and 2\n",
     "M[M.sum(axis=1) > 2, 4:] # mixing masking and slicing \n",
-    "```\n",
-    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test slicing examples above"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "An illustration of indexing in numpy arrays:\n",
     "![Illustration of `np` indexing](../Figures/numpy_indexing.png)\n",
     "\n",
@@ -406,12 +514,43 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Example**: Open data.txt. It contains a list of sources, their identifier (`ID`), their `RA` and `DEC` coordinates, their estimated redshift (`z`), uncertainty on the redshift (`z_err`), and a data quality flag (`zQF`), indicating whether the estimate is reliable (assume 0 means no flagging, hence a reliable estimate). You are only interested in objects with a non-zero `z`, for which the data quality flag is 0. Save the trimmed data in a new txt file."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = np.loadtxt('data.txt')"
+    "data = np.loadtxt('data.txt')\n",
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's now save the data that you trimmed out:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#np.savetxt('data_trim.txt', data_trim)"
    ]
   },
   {
@@ -420,13 +559,11 @@
    "source": [
     "#### II.5.1 What if my input/output file is not just a simple array ? \n",
     "\n",
-    "More advanced functions exist in `numpy` to read text/csv files, accounting fro missing values, excluding columns, guess data type ... See [Modules_in_python_numpy_adv.ipynb](Modules_in_python_numpy_adv.ipynb) to learn about them. \n",
-    "\n",
-    "To deal with more advanced table formating, I strongly encourage you to look at the following two modules that generate specific objects with a bit more capabilities than arrays: \n",
+    "More advanced functions exist in `numpy` to read text/csv files, accounting for missing values, excluding columns, guess data type ... These will be covered in the advanced course on data processing. Below is a simple example showcasing how to parse the data.txt file using `Astropy`, and placing the data into a `Table`. An alternative is to use `pandas`, and load the data as a `DataFrame` object: \n",
     "\n",
     "- `Table` and `QTable` (table that manipulates quantities) objects in `astropy.table` and : https://docs.astropy.org/en/stable/table/ . `Table` objects may be sufficient for most of your needs and manages many different formats (including csv, latex, rdb, hdf5, ...). Conversion to/from numpy arrays and to/from `pandas.DataFrame` is often possible. Within Jupyter Notebooks, Tables are also \"pretty printed\", which eases analysis. \n",
     "\n",
-    "- `DataFrame` and `Series` objects in `pandas`: https://pandas.pydata.org/pandas-docs/stable/getting_started/overview.html. Those objects/structures are commonly used in data science and machine learning. They manage an even larger variety of input files than `astropy.table` (e.g. excel and sql tables, pickle objects, ...) but Dataframe, being more versatile that astropy Tables, can also be trickier to manipulate. "
+    "- `DataFrame` and `Series` objects in `pandas`: https://pandas.pydata.org/pandas-docs/stable/getting_started/overview.html. Those objects/structures are commonly used in data science and machine learning. They manage an even larger variety of input files than `astropy.table` (e.g. excel and sql tables, pickle objects, ...) but Dataframe, being more versatile than astropy Tables, can also be trickier to manipulate. "
    ]
   },
   {
@@ -445,8 +582,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# One needs to specify the format of the text file ... plain ascii will be a good choice\n",
-    "data_tab = Table.read('data.txt')"
+    "# Note: one needs to specify the format of the text file ... plain ascii is a good choice to avoid a bug\n",
+    "#data_tab = Table.read('data.txt')"
    ]
   },
   {
@@ -476,6 +613,13 @@
     "# Casting of an astropy.Table into an array \n",
     "z_array = np.array(data_tab['z'][0:3])\n",
     "z_array"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The same exercise as above can be done much more conveniently by accessing specific columns with header keywords (e.g. 'z')."
    ]
   },
   {
@@ -599,7 +743,7 @@
     "    f.write(mylist_of_lines[0]+mylist_of_lines[1]+ ... + mylist_of_lines_[n])  # you can use list comprenhesion as argument\n",
     "```\n",
     "\n",
-    "**Exercise to practive low-level file manipulation:**\n",
+    "**Exercise to practice low-level file manipulation:**\n",
     "\n",
     "*This exercise is related to II.5.2 and II.5.3 and may be skipped at a beginner's level*\n",
     "\n",
@@ -655,7 +799,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Experiment with the above examples "
+    "# Experiment with the above examples"
    ]
   },
   {
@@ -737,7 +881,7 @@
     "\n",
     "- `np.sort(a)`: Returns sorted copy of an array along a specific axis (default = last axis)\n",
     "- `np.searchsorted(a, v)`: Find indices where elements should be inserted to maintain order.\n",
-    "- `np.concatenate(a1, a2, ...)`: Join a sequence of arrays along an existing axis.\n",
+    "- `np.concatenate((a1, a2), axis=0, ...)`: Join a sequence of arrays along an existing axis.\n",
     "- `np.hstack(tup)` / `np.vstack(tup)`: Stack arrays in sequence horizontally/vertically (column-/row- wise).\n",
     "- `np.where(condition, [x, y])`: Return elements chosen from `x` or `y` depending on `condition`.\n"
    ]
@@ -782,21 +926,14 @@
     "\n",
     "- About string formatting: https://docs.python.org/3/tutorial/inputoutput.html"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda env:py3_lectures]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-py3_lectures-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -808,7 +945,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
